ARROW-805: [C++] Don't throw IOError when listing empty HDFS dir